--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -23,4 +23,4 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        ssh ubuntu@3.110.81.28 -t "cd demo-ci-cd/ && git pull origin main && export PATH=/home/ubuntu/.nvm/versions/node/v22.10.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/ubuntu/.nvm/versions/node/v22.14.0/bin/npm && npm install -g pnpm && pnpm install && pnpm run build && pm2 restart web-app"
+        ssh ubuntu@3.110.81.28 -t "cd demo-ci-cd/ && git pull origin main && export PATH=/home/ubuntu/.nvm/versions/node/v22.14.0/bin/npm:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin && npm install -g pnpm && pnpm install && pnpm run build && pm2 restart web-app"
