--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,6 +21,20 @@ jobs:
     - name: Add EC2 host to known hosts
       run: ssh-keyscan -H 3.110.81.28 >> ~/.ssh/known_hosts
 
-    - name: Deploy to EC2
+    - name: Create symlinks and deploy to EC2
       run: |
-        ssh ubuntu@3.110.81.28 -t "cd demo-ci-cd/ && git pull origin main && export PATH=/home/ubuntu/.nvm/versions/node/v22.14.0/bin/npm:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin && npm install -g pnpm && pnpm install && pnpm run build && pm2 restart web-app"
+        ssh ubuntu@3.110.81.28 -t "
+          export NVM_DIR=\"\$HOME/.nvm\" && 
+          [ -s \"\$NVM_DIR/nvm.sh\" ] && . \"\$NVM_DIR/nvm.sh\" && 
+          
+          sudo ln -sf \"\$NVM_DIR/versions/node/\$(nvm version)/bin/node\" \"/usr/local/bin/node\" && 
+          sudo ln -sf \"\$NVM_DIR/versions/node/\$(nvm version)/bin/npm\" \"/usr/local/bin/npm\" && 
+          sudo ln -sf \"\$NVM_DIR/versions/node/\$(nvm version)/bin/pm2\" \"/usr/local/bin/pm2\" && 
+          
+          cd demo-ci-cd/ && 
+          git pull origin main && 
+          npm install -g pnpm && 
+          pnpm install && 
+          pnpm run build && 
+          pm2 restart web-app
+        "
